# informatica_grafica

./: .gitignore  CMakeLists.txt  README.md
SmallPM_v1/SmallPM-linux/SmallPM/data/: shrek.mtl
SmallPM_v1/SmallPM-linux/SmallPM/data/Shrek_figurine/: Shrek.mtl
SmallPM_v1/SmallPM-linux/SmallPM/data/textures/: Shrek.ppm  Shrek2.ppm  wall.ppm
SmallPM_v1/SmallPM-linux/SmallPM/include/: PhotonMapping.h  RenderEngine.h
SmallPM_v1/SmallPM-linux/SmallPM/smallrt/include/: PlaneLightSource.h  Texture.h  Vector3.h  globals.h
SmallPM_v1/SmallPM-linux/SmallPM/src/: PhotonMapping.cpp  PlaneLightSource.cpp  RenderEngine.cpp  Texture.cpp  main.cpp
includes/: BRDF.hpp  Cone.hpp  Cube.hpp  Cylinder.hpp  Dielectric.hpp  Geometry.hpp  Lambertian.hpp  Light.hpp  Material.hpp  Phong.hpp  Plane.hpp  Planets.hpp  RGB.hpp  Ray_tracer.hpp  Russian_Roulette.hpp  Scene.hpp  Semaphore.hpp  Specular.hpp  Sphere.hpp  Textures.hpp  Tone_mapper.hpp  Tone_mapping.hpp  Transformation.hpp  Transmissive.hpp
media/informe_PM/: q2_1_DIP.hdr  q2_1_DIP_100k_500.hdr  q2_1_DIP_ONLY.hdr  q2_1_DIP_ONLY_100k_500.hdr  q2_1_DIR.hdr  q2_2.hdr  q2_2_100k_500.hdr  q2_3_100k_1.hdr  q2_3_100k_10.hdr  q2_3_100k_100.hdr  q2_3_100k_50.hdr  q2_3_10k_10.hdr  q2_3_1k_10.hdr  q2_4_DIP.hdr  q2_4_DIP_100k_500.hdr  q2_4_DIP_ONLY.hdr  q2_4_DIP_ONLY_100k_500.hdr  q2_4_DIR.hdr
media/informe_PM/hdr/: area.hdr  area_light_balls.hdr  area_light_bunny.hdr  balls.hdr
src/: BRDF.cpp  Cone.cpp  Cube.cpp  Cylinder.cpp  Dielectric.cpp  Geometry.cpp  Lambertian.cpp  Light.cpp  Material.cpp  Path_tracer.cpp  Phong.cpp  Plane.cpp  Planets.cpp  RGB.cpp  Ray_tracer.cpp  Scene.cpp  Semaphore.cpp  Specular.cpp  Sphere.cpp  Textures.cpp  Tone_mapper.cpp  Tone_mapping.cpp  Transformation.cpp  Transmissive.cpp  test.cpp
src/Components/: Geometry.cpp  Geometry.hpp  Planets.cpp  Planets.hpp  Transformation.cpp  Transformation.hpp  test.cpp
